--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
             
             <p class="final-note">Для нас важно, чтобы каждый чувствовал себя частью команды.</p>
             
-            <a href="https://t.me/example" class="telegram-button" target="_blank">Наш Telegram-канал</a>
+            <a href="https://t.me/Farabi_Ministers" class="telegram-button" target="_blank">Наш Telegram-канал</a>
         </div>
     </div>
 
@@ -777,4 +777,5 @@
         });
     </script>
 </body>
+
 </html>
